# pspark

./: .gitignore  Makefile  README.md  cli.py  docker-compose.yml  duties.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
compose/s3local/: s3_create_buckets.sh
compose/spark-client/: Dockerfile  entrypoint.sh
scripts/: multirun.sh  setup.sh  venv_pack.sh
src/hello/: README.md  __main__.py  cli.py
src/pspark/: __init__.py  __main__.py  cli.py
src/pspark/hello/: __init__.py  cli.py
tests/: __init__.py  test_cli.py
