[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
name = "pspark"
description = "Python Spark monorepo"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
    "pyspark>=3.2.1",
    "wonderwords>=2.2.0"]

[tool.pdm]
version = {use_scm = true}
package-dir = "src"
includes = ["src/"]

[tool.pdm.dev-dependencies]
duty = ["duty>=0.7"]
format = [
    "autoflake>=1.4",
    "black>=21.10b0",
    "isort>=5.10",
]
maintain = [
    # TODO: remove this section when git-changelog is more powerful
    "git-changelog>=0.4",
]
quality = [
    "darglint>=1.8",
    "flake8-bandit>=2.1",
    "flake8-black>=0.2",
    "flake8-bugbear>=21.9",
    "flake8-builtins>=1.5",
    "flake8-comprehensions>=3.7",
    "flake8-docstrings>=1.6",
    "flake8-pytest-style>=1.5",
    "flake8-string-format>=0.3",
    "flake8-tidy-imports>=4.5",
    "flake8-variables-names>=0.0",
    "pep8-naming>=0.12",
    "wps-light>=0.15",
]
tests = [
    "pytest>=6.2",
    "pytest-cov>=3.0",
    "pytest-randomly>=3.10",
    "pytest-sugar>=0.9",
    "pytest-xdist>=2.4",
]
typing = [
    "mypy>=0.910",
    "types-markdown>=3.3",
    "types-toml>=0.10",
]
security = ["safety>=1.10"]

# code formatter
[tool.black]
line-length = 120
exclude = "tests/fixtures"

# import sorting
[tool.isort]
line_length = 120
not_skip = "__init__.py"
multi_line_output = 3
force_single_line = false
balanced_wrapping = true
default_section = "THIRDPARTY"
known_first_party = "pspark"
include_trailing_comma = true
